# partly

./: LICENSE.txt  Setup.hs  partly.cabal  partly.hs  readme.markdown  test-json.hs  test-lib.hs
Partly/: Common.hs  Json.hs  Make.hs  View.hs
Partly/Json/: Test.hs
System/Disk/Partitions/: MBR.hs
test/System/Disk/Partitions/MBR/: Gen.hs  Test.hs
