Name: partly
Author: startling
Version: 0.0.0
License: BSD3
Description: View, create, and alter DOS-style MBRs.
Cabal-Version: >= 1.2
Build-Type: Simple
Library
  exposed-modules:
      System.Disk.Partitions.MBR
  build-depends:
      base
    , bytestring
    , binary
Executable partly
  main-is: partly.hs
  other-modules:
      Partly.View
    , Partly.Make
    , Partly.Json
    , Partly.Common
  build-depends:
      base
    , aeson
    , aeson-pretty
    , vector
    , base64-bytestring
    , optparse-applicative
Test-Suite test-partly-lib
  type: exitcode-stdio-1.0
  main-is: test-lib.hs
  build-depends:
      QuickCheck
Test-Suite test-partly-json
  type: exitcode-stdio-1.0
  main-is: test-json.hs
  other-modules:
      Partly.Json
    , System.Disk.Partitions.MBR.Gen
  build-depends:
      aeson
    , QuickCheck
