Name: partly
Author: startling
Version: 1.0.0.0
License: BSD3
Description: View, create, and alter DOS-style MBRs.
Cabal-Version: >= 1.2
Build-Type: Simple
Library
  exposed-modules:
      System.Disk.Partitions.MBR
  build-depends:
      base == 4.*
    , bytestring >= 0.9
    , binary >= 0.6.4.0
Executable partly
  main-is: partly.hs
  other-modules:
      Partly.View
    , Partly.Make
    , Partly.Json
    , Partly.Common
  build-depends:
      base == 4.*
    , aeson >= 0.6
    , aeson-pretty >= 0.7
    , vector >= 0.9
    , base64-bytestring >= 0.1.2.0
    , optparse-applicative >= 0.4.1
Test-Suite test-partly-lib
  type: exitcode-stdio-1.0
  main-is: test-lib.hs
  build-depends:
      QuickCheck >= 2.5
Test-Suite test-partly-json
  type: exitcode-stdio-1.0
  main-is: test-json.hs
  other-modules:
      Partly.Json
    , System.Disk.Partitions.MBR.Gen
  build-depends:
      aeson >= 0.6
    , QuickCheck >= 2.5
